--- a/Actividad1/Views/Home/Portfolio.cshtml
+++ b/Actividad1/Views/Home/Portfolio.cshtml
@@ -21,27 +21,27 @@
                         <div class="iso-box-wrapper col4-iso-box">
 
                             <div class="iso-box html wordpress mobile col-lg-4 col-md-4 col-sm-6">
-                                <a href="images/portfolio-img1.jpg" data-lightbox-gallery="portfolio-gallery"><img src="images/portfolio-img1.jpg" alt="portfolio img"></a>
+                                <a href="~/images/portfolio-img1.jpg" data-lightbox-gallery="portfolio-gallery"><img src="images/portfolio-img1.jpg" alt="portfolio img"></a>
                             </div>
 
                             <div class="iso-box wordpress col-lg-4 col-md-4 col-sm-6">
-                                <a href="images/portfolio-img2.jpg" data-lightbox-gallery="portfolio-gallery"><img src="images/portfolio-img2.jpg" alt="portfolio img"></a>
+                                <a href="~/images/portfolio-img2.jpg" data-lightbox-gallery="portfolio-gallery"><img src="images/portfolio-img2.jpg" alt="portfolio img"></a>
                             </div>
 
                             <div class="iso-box html mobile col-lg-4 col-md-4 col-sm-6">
-                                <a href="images/portfolio-img3.jpg" data-lightbox-gallery="portfolio-gallery"><img src="images/portfolio-img3.jpg" alt="portfolio img"></a>
+                                <a href="~/images/portfolio-img3.jpg" data-lightbox-gallery="portfolio-gallery"><img src="images/portfolio-img3.jpg" alt="portfolio img"></a>
                             </div>
 
                             <div class="iso-box wordpress col-lg-4 col-md-4 col-sm-6">
-                                <a href="images/portfolio-img4.jpg" data-lightbox-gallery="portfolio-gallery"><img src="images/portfolio-img4.jpg" alt="portfolio img"></a>
+                                <a href="~/images/portfolio-img4.jpg" data-lightbox-gallery="portfolio-gallery"><img src="images/portfolio-img4.jpg" alt="portfolio img"></a>
                             </div>
 
                             <div class="iso-box html photoshop col-lg-4 col-md-4 col-sm-6">
-                                <a href="images/portfolio-img5.jpg" data-lightbox-gallery="portfolio-gallery"><img src="images/portfolio-img5.jpg" alt="portfolio img"></a>
+                                <a href="~/images/portfolio-img5.jpg" data-lightbox-gallery="portfolio-gallery"><img src="images/portfolio-img5.jpg" alt="portfolio img"></a>
                             </div>
 
                             <div class="iso-box photoshop col-lg-4 col-md-4 col-sm-6">
-                                <a href="images/portfolio-img6.jpg" data-lightbox-gallery="portfolio-gallery"><img src="images/portfolio-img6.jpg" alt="portfolio img"></a>
+                                <a href="~/images/portfolio-img6.jpg" data-lightbox-gallery="portfolio-gallery"><img src="images/portfolio-img6.jpg" alt="portfolio img"></a>
                             </div>
 
                         </div>
